--- a/style.css
+++ b/style.css
@@ -623,7 +623,6 @@ footer {
   
 }
 
-
 @media screen and (min-width: 600px) and (max-width: 1200px) {
    body{
     /*width: 90%;*/
@@ -656,9 +655,28 @@ footer {
 
 @media screen and (max-width: 550px) {
 
+  nav{
+    /* border: 2px solid red; */
+    background-color: #181818;
+    height: 6vh;
+    font-size: 2vh;
+  }
+  .nav-container{
+    width: 70vh;
+    /* border: 2px solid yellow; */
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .navigation{
+    font-size: 2vh;
+  }
+
+  .home-container{
+    margin-top: -20vh;
+  }
   .logo-container img {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 20px;
 }
 
 .fa-xmark {
@@ -671,25 +689,30 @@ footer {
 }
 
 .slogon-p {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
 }
 
 .slogon-head {
-  font-size: 2rem;
+  /* border: 2px solid red; */
+  margin-top: 3vh;
+  font-size: 3.9rem;
 }
 
 .slogon-container {
-  width: 350px;
+  width: 430px;
   padding-top:18%;
+  /* border: 2px solid red; */
 }
 
 .slogon-p1 {
+  /* border: 2px solid red; */
+  width: 420px;
   font-size: 0.6rem;
 }
 
 .home-search-button {
   padding: 10px 20px;
-  font-size: 0.9rem;
+  font-size: 1.6rem;
   border-radius: 10px;
 }
  /* search page */
@@ -701,15 +724,36 @@ footer {
 
 input {
   width: 80vw;
-  height: 10vh;
+  /* height: 10vh; */
   padding: 10px 50px;
   font-size: 0.8rem;
 }
-
 .search-icon-container {
   right: -11%;
+  border-right: 2px solid black;
+  padding-right: 0.9vh;
 }
-
+.search-icon-container i{
+  font-size: 3vh;
+}
+.character-more-info-container{
+  border: 2px solid rgba(255, 0, 0, 0.459);
+  display: block;
+  width: 410px;
+}
+.more-info-dip-container{
+  margin-left: 20px;
+}
+.more-info-image-container img{
+  width: 100%;
+  height: 40%;
+}
+.more-info-image {
+  width: 75%;
+  height: 75%;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px #000000;
+}
 .fa-magnifying-glass {
   font-size: 0.9rem;
 }
