--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@ footer {
   }
 
   .home-container{
-    margin-top: -20vh;
+    /* margin-top: -10vh; */
   }
   .logo-container img {
     width: 80px;
